2004-05-14    Ping Cheng <pingc@wacom.com>
	* Removed DoubleSpeed and DoubleRadius options (use system default instead)
	* Fixed tool on tablet when driver starts issue
	* Updated wacomcpl and webpages
	* Added MODVER string to default option in configure.in

2004-04-02    Ping Cheng <pingc@wacom.com>
	* Fixed TwinView Absolute mode and DoubleSpeed check
	* Fixed tool on tablet when driver starts issue
	* Released version 0.6.2

2004-03-11    Ping Cheng <pingc@wacom.com>
	* Modified wacusb.c for Debian
	* Fixed DoubleSpeed and DoubleRadius issues

2004-03-05    Ping Cheng <pingc@wacom.com>
	* Modified tcl and tk configuration options
	* Updated webpage for kernel 2.6 support

2004-03-02    Ping Cheng <pingc@wacom.com>
	* Support 2.6.2/3 (Ned Konz)
	* Released version 0.6.1

2004-02-24    Ping Cheng <pingc@wacom.com>
	* Support module versioning for kernel 2.4.22 and later (Adrian Secord)
	* Added "Mode Toggle" to button functions to switch mode

2004-02-05    Ping Cheng <pingc@wacom.com>
	* Work around for 2.4.24 support (Marek Olszewski)

2004-02-04    Ping Cheng <pingc@wacom.com>
	* Released version 0.6.0

2004-01-19    Ping Cheng <pingc@wacom.com>
	* Sync wacom.c in kernel 2.6 with wacom.c in kernel 2.4 (Ned Konz)
	* Work around for 2.4.23 support (Jens Georg)

2004-01-13    Ping Cheng <pingc@wacom.com>
	* Fixed relative wheel bug in wacom.c for 2.6
	* Modified tcl and tk configuration options
	* Rearranged wacomcpl windows for Tablet PC
	* Updated README

2003-12-15    Ping Cheng <pingc@wacom.com>
	* Fixed a wacom.c bug for 2.6 (Martin Renold)
	* Added evdev.c to src/2.6 to attach replugged device
	* Updated README

2003-12-10    Ping Cheng <pingc@wacom.com>
	* Support kernel 2.6.0

2003-11-26    Ping Cheng <pingc@wacom.com>
        * Support Tablet PC Buttons. Default is off.
          Usage:
                xsetwacom set $device tpcbutton 1  (to turn it on)
                xsetwacom set $device tpcbutton 0  (to turn it off)